# hawker

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  case.md  case_run.py  pyproject.toml  run.py  test_mcp_fix.py
document/: DESIGN.md  agent_compiler_healing_plan.md  agent_tool_contract_spec.md  core_context_engine.md  core_context_engine_external.md  hawker_code_review.md  hawker_code_review_delta.md  memory_system_plan.md  observer_knowledge_base_plan.md
hawker_agent/: __init__.py  cli.py  config.py  exceptions.py  langfuse_client.py  observability.py
hawker_agent/agent/: __init__.py  artifact.py  compressor.py  evaluator.py  executor.py  final_delivery.py  healer.py  namespace.py  parser.py  prompts.py  runner.py  step_runtime.py
hawker_agent/browser/: __init__.py  actions.py  cdp.py  dom_utils.py  netlog.py  session.py
hawker_agent/knowledge/: __init__.py  observer.py  store.py
hawker_agent/llm/: __init__.py  client.py  cost.py  tokenizer.py
hawker_agent/memory/: __init__.py  store.py
hawker_agent/models/: __init__.py  cell.py  history.py  item.py  output.py  result.py  state.py  step.py  trace.py
hawker_agent/storage/: __init__.py  exporter.py  logger.py
hawker_agent/templates/: custom_instructions.txt  default_instructions.txt  observer_prompt.jinja2  system_prompt.jinja2
hawker_agent/templates/observer_examples/: api_only.md  browser_required.md  hybrid.md
hawker_agent/tools/: __init__.py  browser_tools.py  data_tools.py  http_tools.py  obs_tools.py  registry.py
scripts/: run_task_suite.py
tests/: __init__.py  test_browser.py  test_cli.py  test_compressor.py  test_dom_context.py  test_download_rigorous.py  test_evaluator.py  test_executor.py  test_executor_async.py  test_final_delivery.py  test_full_async_integration.py  test_healer.py  test_knowledge_store.py  test_llm.py  test_mem0_simulation.py  test_memory.py  test_models.py  test_observability.py  test_observer.py  test_openreview_download.py  test_parser.py  test_runner_sidecar.py  test_step_runtime.py  test_tools.py
