[project]
name = "hawker-agent"
version = "0.1.0"
description = "Autonomous web intelligence agent for browser-first data collection and structured delivery."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "browser-use==0.12.2",
    "litellm",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "nbformat>=5.9",
    "typer>=0.12",
    "rich>=13.0",
    "langfuse>=4.2.0",
    "boto3>=1.42.89",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
